[metadata]
name = ical2orgpy
author = Aitor Soroa
author-email = a.soroa@gmail.com
summary = Converting ICAL file into org-mode format.
description-file = README.rst
home-page = https://github.com/asoroa/ical2org.py
license = GPLv3
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    calendar
    ical
    org
    emacs
[files]
modules = ical2orgpy
[entry_points]
console_scripts =
    ical2orgpy = ical2orgpy:main
