[metadata]
name = ical2orgpy
author = Aitor Soroa
author-email = a.soroa@gmail.com
summary = Converting ICAL file into org-mode format.
description-file = README.rst
home-page = https://github.com/ical2org-py/ical2org.py
license = GPLv3
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    calendar
    ical
    org
    emacs
[files]
modules = ical2orgpy
[entry_points]
console_scripts =
    ical2orgpy = ical2orgpy:main
