[metadata]
name = ical2orgpy
version = attr: ical2orgpy.__version__
author = Aitor Soroa
author_email = a.soroa@gmail.com
summary = Convert ICAL/ICS files into Emacs org-mode format.
long_description = file: README.rst
long_description_content_type = text/x-rst
home_page = https://github.com/ical2org-py/ical2org.py
license = GPLv3
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    calendar
    ical
    org
    emacs

[options]
packages = ical2orgpy
include_package_data = True
install_requires =
    click
    future
    icalendar
    pytz
    tzlocal
    recurring-ical-events>=2.0.1


[options.entry_points]
console_scripts =
    ical2orgpy = ical2orgpy:main
